--- a/src/main/resources/templates/view_save_products.html
+++ b/src/main/resources/templates/view_save_products.html
@@ -77,7 +77,7 @@
          th:object="${productForm}"
          method="post" enctype="multipart/form-data">
     <div th:if="${!isNew}">
-      <input type="hidden" id="productId"  th:value="${productForm.id}"  />
+      <input type="hidden" id="productId"  th:value="${productForm.id}" name="id"  />
       <input type="hidden" name="base64EncodeImage" th:value="${productForm.base64EncodeImage}" />
       <input type="hidden" name="contentType" th:value="${productForm.contentType}" />
     </div>
