:sparkles: feat: 주문 생성 페이지 관리자 페이지 연결

--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -118,8 +118,9 @@
   <title>주문하기</title>
 </head>
 <body class="container-fluid">
-<div class="row justify-content-center m-4">
-  <h1 class="text-center">Grids & Circle</h1>
+<div class="position-relative m-4" style="height: 60px;">
+  <h1 class="position-absolute top-50 start-50 translate-middle" style="margin: 0;">Grids & Circle</h1>
+  <button class="position-absolute top-50 end-0 translate-middle-y button" style="height: 40px;" onclick="location.href='/admin'">관리자 페이지</button>
 </div>
 <div class="card">
   <div class="row">
