--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -140,7 +140,7 @@
               <div class="row text-muted" th:text="${product.category}"></div>
               <div class="row" th:text="${product.productName}"></div>
             </div>
-            <div class="col text-center price" th:text="${product.price} + '원'"></div>
+            <div class="col text-center price" th:text="${#numbers.formatInteger(product.price, 3, 'COMMA')} + '원'"></div>
             <div class="col text-end action">
               <a class="btn btn-small btn-outline-dark"
                  th:attr="product-id=${product.productId}, product-name=${product.productName}, product-price=${product.price}"
