--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -138,7 +138,7 @@
             </div>
             <div class="col">
               <div class="row text-muted" th:text="${product.category}"></div>
-              <div class="row" th:text="${product.productName}"></div>
+              <div class="row" th:text="${#strings.length(product.productName) > 12 ? #strings.substring(product.productName, 0, 9) + '...' : product.productName}"></div>
             </div>
             <div class="col text-center price" th:text="${#numbers.formatInteger(product.price, 3, 'COMMA')} + '원'"></div>
             <div class="col text-end action">
