--- a/src/main/resources/templates/admin/view_save_products.html
+++ b/src/main/resources/templates/admin/view_save_products.html
@@ -86,7 +86,7 @@
         <td>상품명</td>
         <td>
           <input type="text" name="name" th:field="*{name}" />
-          <div id="nameError" class="errorMsg" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color:red">
+          <div id="nameError" class="errorMsg" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="padding-top:5px;color:red">
           </div>
         </td>
       </tr>
@@ -105,7 +105,7 @@
         <td>상품 설명</td>
         <td>
           <input type="text" name="description" th:value="${productForm.description}"/>
-          <div th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="color:red"></div>
+          <div th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="padding-top:5px; color:red"></div>
         </td>
       </tr>
       <tr>
@@ -117,7 +117,7 @@
                    style="width: 70%; margin-right: 5px;"
                    th:value="${productForm.price}" />
           <span>원</span>
-          <div th:if="${#fields.hasErrors('price')}" th:errors="*{price}" style="color:red"></div>
+          <div th:if="${#fields.hasErrors('price')}" th:errors="*{price}" style="padding-top:5px;color:red"></div>
         </td>
       </tr>
       <tr>
