:bug: fix: 주문 생성 페이지 관리자 페이지 URL 수정

--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -120,7 +120,7 @@
 <body class="container-fluid">
 <div class="position-relative m-4" style="height: 60px;">
   <h1 class="position-absolute top-50 start-50 translate-middle" style="margin: 0;">Grids & Circle</h1>
-  <button class="position-absolute top-50 end-0 translate-middle-y button" style="height: 40px;" onclick="location.href='/admin/login'">관리자 페이지</button>
+  <button class="position-absolute top-50 end-0 translate-middle-y button" style="height: 40px;" onclick="location.href='/admin'">관리자 페이지</button>
 </div>
 <div class="card">
   <div class="row">
