:recycle: refactor: 버튼 크기 조정

--- a/src/main/resources/templates/view_orderDetail.html
+++ b/src/main/resources/templates/view_orderDetail.html
@@ -163,7 +163,7 @@
         </button>
         <a sec:authorize="hasAuthority('ADMIN')"
            th:href="@{/admin/orders/list}"
-           class="btn btn-danger">
+           class="btn btn-dark bg-danger border-0">
           관리자 주문 목록
         </a>
       </div>
