:recycle: refactor: 이동 URL 수정

--- a/src/main/resources/templates/admin/view_orders.html
+++ b/src/main/resources/templates/admin/view_orders.html
@@ -117,7 +117,7 @@
     </thead>
     <tbody>
     <tr th:each="order : ${orders_list}" th:if="${orders_list != null}"
-        th:onclick="|location.href='/orders/${order.orderId}'|"
+        th:onclick="|location.href='/admin/orders/${order.orderId}'|"
         style="cursor: pointer;">
       <td th:text="${order.orderId}"></td>
       <td>
