[feat]: 관리자 주문 상세 페이지 -> 관리자용 주문 내역 리스트로 이동 버튼 추가  (#58)
* :recycle: refactor: 경로에 orders 추가 작성

* :recycle: refactor: 관리자용 주문 내역으로 가도록 권한 체크 후 버튼 생성

* :recycle: refactor: 버튼 크기 조정

* :recycle: refactor: 이동 URL 수정

--- a/src/main/resources/templates/view_orderDetail.html
+++ b/src/main/resources/templates/view_orderDetail.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      lang="ko">
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -159,6 +161,11 @@
             th:if="${orderDetail.getEditable()}">
           주문 취소
         </button>
+        <a sec:authorize="hasAuthority('ADMIN')"
+           th:href="@{/admin/orders/list}"
+           class="btn btn-dark bg-danger border-0">
+          관리자 주문 목록
+        </a>
       </div>
     </div>
   </div>
