--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -117,10 +117,14 @@
   </style>
   <title>주문하기</title>
 </head>
+
 <body class="container-fluid">
 <div class="position-relative m-4" style="height: 60px;">
-  <h1 class="position-absolute top-50 start-50 translate-middle" style="margin: 0;">Grids & Circle</h1>
-  <button class="position-absolute top-50 end-0 translate-middle-y button" style="height: 40px;" onclick="location.href='/admin'">관리자 페이지</button>
+  <h1 class="position-absolute top-50 start-50 translate-middle" style="margin: 0;">Grids &
+    Circle</h1>
+  <button class="position-absolute top-50 end-0 translate-middle-y button" style="height: 40px;"
+          onclick="location.href='/admin'">관리자 페이지
+  </button>
 </div>
 <div class="card">
   <div class="row">
@@ -138,9 +142,11 @@
             </div>
             <div class="col">
               <div class="row text-muted" th:text="${product.category}"></div>
-              <div class="row" th:text="${#strings.length(product.productName) > 12 ? #strings.substring(product.productName, 0, 9) + '...' : product.productName}"></div>
+              <div class="row"
+                   th:text="${#strings.length(product.productName) > 12 ? #strings.substring(product.productName, 0, 9) + '...' : product.productName}"></div>
             </div>
-            <div class="col text-center price" th:text="${#numbers.formatInteger(product.price, 3, 'COMMA')} + '원'"></div>
+            <div class="col text-center price"
+                 th:text="${#numbers.formatInteger(product.price, 3, 'COMMA')} + '원'"></div>
             <div class="col text-end action">
               <a class="btn btn-small btn-outline-dark"
                  th:attr="product-id=${product.productId}, product-name=${product.productName}, product-price=${product.price}"
