--- a/src/main/resources/templates/admin/view_find_products.html
+++ b/src/main/resources/templates/admin/view_find_products.html
@@ -78,41 +78,55 @@
     }
   </style>
 </head>
-<body>
 
+<body>
 <div class="form-wrapper">
   <h2>상품 상세 조회</h2>
 
   <table>
     <tr>
       <td>상품명</td>
-      <td><div class="value" th:text="${productResponse.name}"></div></td>
+      <td>
+        <div class="value" th:text="${productResponse.getName()}"></div>
+      </td>
     </tr>
     <tr>
       <td>카테고리</td>
-      <td><div class="value" th:text="${productResponse.category}"></div></td>
+      <td>
+        <div class="value" th:text="${productResponse.getCategory()}"></div>
+      </td>
     </tr>
     <tr>
       <td>상품 설명</td>
-      <td><div class="value" th:text="${productResponse.description}"></div></td>
+      <td>
+        <div class="value" th:text="${productResponse.getDescription()}"></div>
+      </td>
     </tr>
     <tr>
       <td>가격</td>
-      <td><div class="value" th:text="${productResponse.getPrice()} + ' 원'"></div></td>
+      <td>
+        <div class="value" th:text="${productResponse.getPrice()} + ' 원'"></div>
+      </td>
     </tr>
     <tr>
       <td>상품 이미지</td>
       <td>
-        <img th:src="'data:' + ${productResponse.getContentType()} + ';base64,' + ${productResponse.getBase64EncodeImage()}" alt="상품 이미지" class="product-image"/>
+        <img
+            th:src="'data:' + ${productResponse.getContentType()} + ';base64,' + ${productResponse.getBase64EncodeImage()}"
+            alt="상품 이미지" class="product-image"/>
       </td>
     </tr>
   </table>
 
   <div class="button-group" th:if="${isAdmin}">
-    <input type="hidden" id="productId" th:value="${productResponse.id}" />
-    <button type="button" th:onclick="|window.location.href='@{/admin/products/edit/{id}(id=${productResponse.id})}'|">수정</button>
-    <button type="button" id="deleteBtn" >삭제</button>
-    <button type="button" th:onclick="|window.location.href='@{/admin/products/list}'|">목록으로</button>
+    <input type="hidden" id="productId" th:value="${productResponse.getId()}"/>
+    <button type="button"
+            th:onclick="|window.location.href='@{/admin/products/edit/{id}(id=${productResponse.getId()})}'|">
+      수정
+    </button>
+    <button type="button" id="deleteBtn">삭제</button>
+    <button type="button" th:onclick="|window.location.href='@{/admin/products/list}'|">목록으로
+    </button>
   </div>
 
   <div class="button-group" th:if="${not isAdmin}">
