--- a/src/main/resources/templates/admin/view_save_products.html
+++ b/src/main/resources/templates/admin/view_save_products.html
@@ -8,12 +8,12 @@
       background-color: #f8f9fa;
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 50px 0;
+      padding: 0;
     }
 
     .form-wrapper {
       width: 600px;
-      margin: 0 auto;
+      margin: 50px auto 0 auto;
       background-color: white;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -70,6 +70,7 @@
 </head>
 
 <body>
+<div th:replace="fragment/header :: header"></div>
 <div class="form-wrapper">
   <h2 th:text="${isNew} ? '상품 등록' : '상품 수정'">상품 등록</h2>
 
