--- a/src/main/resources/templates/admin/view_orders.html
+++ b/src/main/resources/templates/admin/view_orders.html
@@ -8,14 +8,14 @@
       font-family: sans-serif;
       background: #f5f5f5;
       margin: 0;
-      padding: 40px 0;
+      padding: 0;
     }
 
     .card {
       background: white;
       width: 90%;
       max-width: 900px;
-      margin: 0 auto;
+      margin: 50px auto 0 auto;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
       padding: 32px;
@@ -87,6 +87,7 @@
 </head>
 
 <body>
+<div th:replace="fragment/header :: header"></div>
 <div th:if="${errorMessage != null}">
   <script th:inline="javascript">
     alert([[${errorMessage}]]);
