--- a/src/main/resources/templates/admin/view_products.html
+++ b/src/main/resources/templates/admin/view_products.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
@@ -7,12 +8,13 @@
     body {
       font-family: 'Pretendard', sans-serif;
       background-color: #f8f9fa;
-      padding: 40px;
+      padding: 0px;
+      margin: 0;
     }
 
     .container {
+      margin: 40px auto 0 auto;  /* 헤더와 간격 줌 */
       max-width: 1200px;
-      margin: 0 auto;
       background-color: white;
       padding: 30px;
       border-radius: 12px;
@@ -88,6 +90,8 @@
 </head>
 
 <body>
+<div th:replace="fragment/header :: header"></div>
+<div style="height: 60px;"></div>
 <div class="container">
   <div th:if="${errorMessage != null}">
     <script th:inline="javascript">
