--- a/src/main/resources/templates/view_orderDetail.html
+++ b/src/main/resources/templates/view_orderDetail.html
@@ -72,6 +72,7 @@
 </head>
 
 <body class="container-fluid">
+<div th:replace="fragment/header :: header"></div>
 <div class="row justify-content-center my-4">
   <h1 class="text-center">주문 상세 조회</h1>
 </div>
