--- a/src/main/resources/templates/view_orders.html
+++ b/src/main/resources/templates/view_orders.html
@@ -7,11 +7,8 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f2f2f2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
+      padding: 0;
     }
 
     .container {
@@ -21,6 +18,7 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       width: 80%;
       max-width: 900px;
+      margin: 60px auto 0 auto;
     }
 
     h1 {
@@ -128,6 +126,7 @@
 </head>
 
 <body>
+<div th:replace="fragment/header :: header"></div>
 <div class="container">
   <h1 th:text="${email != null} ? ${email} + '님의 주문 내역' : '주문 내역'">주문 내역</h1>
 
