--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -13,6 +13,8 @@
         crossorigin="anonymous">
   <style>
     body {
+      margin: 0;
+      padding: 0;
       background: #f8f9fa;
     }
 
@@ -117,14 +119,9 @@
   </style>
   <title>주문하기</title>
 </head>
-
-<body class="container-fluid">
+<body>
+<div th:replace="fragment/header :: header"></div>
 <div class="position-relative m-4" style="height: 60px;">
-  <h1 class="position-absolute top-50 start-50 translate-middle" style="margin: 0;">Grids &
-    Circle</h1>
-  <button class="position-absolute top-50 end-0 translate-middle-y button" style="height: 40px;"
-          onclick="location.href='/admin'">관리자 페이지
-  </button>
 </div>
 <div class="card">
   <div class="row">
