:lipstick: style: header 추가 - ver0.1

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -17,32 +17,50 @@
       background-color: #767575;
       color: #fff;
     }
+
     .logo {
       font-size: 24px;
       font-weight: bold;
       color: #fff;
       text-decoration: none;
     }
+
     .nav-links {
       display: flex;
-      gap: 20px;
+      gap: 10px;  /* 간격 좁힘 */
+      align-items: center;
     }
+
     .nav-links a {
-      padding-top: 9px;
       text-decoration: none;
       color: #fff;
       font-weight: 500;
+      padding: 0 10px;
+      position: relative;
     }
+
+    .nav-links a:not(:last-child)::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      height: 14px;
+      width: 1px;
+      background: #bbb;
+    }
+
+
     .nav-links a:hover {
       color: #ddd;
     }
-    .button {
-      background-color: #444;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 10px 20px;
-      font-size: 16px;
+
+    .divider {
+      color: #ccc;
+    }
+
+    .button:hover {
+      background-color: #333;
     }
   </style>
   <a href="/" class="logo" th:href="@{/}">CoffeeShop</a>
@@ -53,7 +71,7 @@
       <a href="/" th:href="@{/admin/products/list}">상품 목록</a>
       <a href="/" th:href="@{/admin/products/new}">상품 등록</a>
       <a href="/" th:href="@{/admin/orders/list}">주문 목록</a>
-      <a href="/logout" th:href="@{/logout}">로그아웃</a>
+      <a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">로그아웃</a>
       <form id="logoutForm" th:action="@{/admin/logout}" method="post" style="display: none;">
       </form>
     </span>
@@ -61,9 +79,7 @@
     <span sec:authorize="isAnonymous()">
       <a href="/" th:href="@{/}">홈</a>
       <a href="/products" th:href="@{/orders/search}">주문 내역</a>
-      <button class="button" style="height: 40px;"
-              onclick="location.href='/admin'">관리자 로그인
-      </button>
+      <a href="/admin" th:href="@{/admin}">관리자 로그인</a>
     </span>
   </div>
   <script>
