--- a/src/main/resources/templates/view_update_order.html
+++ b/src/main/resources/templates/view_update_order.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 
-<body class="container-fluid">
+<body>
 <div th:replace="fragment/header :: header"></div>
 <div class="row justify-content-center my-4">
   <h1 class="text-center">주문 내역 수정</h1>
