--- a/src/main/resources/templates/view_orders.html
+++ b/src/main/resources/templates/view_orders.html
@@ -6,13 +6,13 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f2f2f2;
+      background-color: #f8f9fa;
       margin: 0;
       padding: 0;
     }
 
     .container {
-      background-color: #ffffff;
+      background-color: #eeeeee;
       padding: 40px;
       border-radius: 16px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -64,10 +64,11 @@
       border: 1px solid #ccc;
       padding: 12px;
       text-align: center;
+      background-color: #f8f9fa;
     }
 
     th {
-      background-color: #f0f0f0;
+      background-color: #d6d6d6;
     }
 
     tr:hover {
@@ -160,7 +161,7 @@
         <span th:class="'order-status ' + ${order.getOrderStatus()}"
               th:text="${order.getOrderStatus()}"></span>
       </td>
-      <td th:text="${order.getCreatedAt()}"></td>
+      <td th:text="${#temporals.format(order.getCreatedAt(), 'yyyy-MM-dd HH:mm:ss')}"></td>
     </tr>
     </tbody>
   </table>
